# drink-dispenser

./: build.sh  config.ini  drink_dispenser.py  gpio-reset.sh  led_test.py  machine_status.py  pyproject.toml  startup-wrapper.sh
src/drink_dispenser/: animations.py  components.py  drink_dispenser.py  gui.py  led_demo.py  machine.py  machine_status.py
tests/: drink_dispenser_test.py
